@@ -102,25 +102,26 @@
         <module>modules/agent-framework</module>
         <module>tools</module>
         <module>modules/ide-integration</module>
+        <module>modules/file-server</module>
     </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <derby.version>10.13.1.1</derby.version>
-        <org.slf4j.version>2.0.13</org.slf4j.version>
-        <log4j2.version>2.23.1</log4j2.version>
+        <org.slf4j.version>2.0.16</org.slf4j.version>
+        <log4j2.slf4j.impl>2.24.0</log4j2.slf4j.impl>
+        <log4j2.version>2.24.0</log4j2.version>
         <surefire.version>3.0.0-M4</surefire.version>
         <junit.version>4.12</junit.version>
-        <curator.version>2.8.0</curator.version>
-        <groovy.version>2.4.7</groovy.version>
+        <curator.version>5.7.0</curator.version>
+        <groovy.version>3.0.23</groovy.version>
         <xpp3.version>1.1.6</xpp3.version>
         <xpp5.version>1.2.8</xpp5.version>
         <xsul.version>2.10.7</xsul.version>
         <xsul5.version>1.2.7</xsul5.version>
         <atomixmiser.version>0.9.4</atomixmiser.version>
-        <jackson.core.version>2.9.10</jackson.core.version>
-        <jackson.databind.version>2.9.10.8</jackson.databind.version>
+        <fasterxml.jackson.version>2.15.4</fasterxml.jackson.version>
         <jersey.version>1.13</jersey.version>
         <cargo.version>1.3.1</cargo.version>
         <oa4mp.version>1.1.3</oa4mp.version>
@@ -131,7 +132,7 @@
         <mysql.connector.version>5.1.34</mysql.connector.version>
         <skipTests>false</skipTests>
         <google.gson.version>2.10.1</google.gson.version>
-        <zk.version>3.4.0</zk.version>
+        <zk.version>3.9.2</zk.version>
         <amqp.client.version>3.5.1</amqp.client.version>
         <snakeyaml.version>1.15</snakeyaml.version>
         <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
@@ -140,7 +141,7 @@
         <kafka-clients.version>1.0.0</kafka-clients.version>
         <json.version>20160212</json.version>
         <commons.io.version>2.11.0</commons.io.version>
-        <google.guava.version>20.0</google.guava.version>
+        <google.guava.version>33.2.1-jre</google.guava.version>
         <jacoco.version>0.8.1</jacoco.version>
         <openjpa.version>3.1.0</openjpa.version>
         <dozer.version>5.4.0</dozer.version>
@@ -150,7 +151,11 @@
         <commons.lang.version>2.6</commons.lang.version>
         <org.apache.commons.pool2.version>2.7.0</org.apache.commons.pool2.version>
         <helix.version>0.9.7</helix.version>
+        <keycloak.admin.client.version>24.0.4</keycloak.admin.client.version>
+        <rest.easy.client.version>6.2.8.Final</rest.easy.client.version>
         <httpclient.version>4.5.14</httpclient.version>
+        <codehaus.jackson.version>1.9.13</codehaus.jackson.version>
+        <spring.boot.version>3.2.4</spring.boot.version>
     </properties>
 
     <dependencies>
@@ -202,7 +207,7 @@
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-slf4j2-impl</artifactId>
-                <version>${log4j2.version}</version>
+                <version>${log4j2.slf4j.impl}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
@@ -368,7 +373,7 @@
                     <!-- Integration tests are run using the fail-safe plugin in the module
                         pom -->
                     <useSystemClassLoader>false</useSystemClassLoader>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m --add-opens java.base/java.lang=ALL-UNNAMED
                         -javaagent:${settings.localRepository}/org/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar
                     </argLine>
 
